# paper-recommendation

./: .env.example  .gitignore  README.md  REQUIREMENTS.md  ROADMAP.md  app.py  main.py  pyproject.toml
.github/workflows/: daily_paper.yml  monthly_paper.yml  weekly_paper.yml
pages/: 1_papers.py  2_search.py  3_reports.py
src/rag_paper_recommend/: container.py
src/rag_paper_recommend/collector/: arxiv_collector.py  base.py
src/rag_paper_recommend/config/: settings.py
src/rag_paper_recommend/llm/: base.py  claude_client.py  factory.py  gemini_client.py  openai_client.py
src/rag_paper_recommend/notifier/: email_notifier.py
src/rag_paper_recommend/pipeline/: bootstrap_pipeline.py  daily_pipeline.py  synthesis_pipeline.py
src/rag_paper_recommend/processor/: bootstrap_synthesizer.py  extractor.py  prompts.py  synthesizer.py  trend_analyzer.py
src/rag_paper_recommend/reporter/: markdown_reporter.py
src/rag_paper_recommend/reporter/templates/: daily_report.md.j2  synthesis_report.md.j2
src/rag_paper_recommend/scheduler/: job_scheduler.py
src/rag_paper_recommend/storage/: models.py  sqlite_store.py  vector_store.py
