[project]
name = "rag-paper-recommend"
version = "0.1.0"
description = "研究論文の自動収集・トレンド分析システム"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.85.0",
    "apscheduler>=3.11.2",
    "arxiv>=2.4.1",
    "chromadb>=1.5.5",
    "google-genai>=1.67.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=2.28.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.45.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_paper_recommend"]
